// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`writingDirection Should parse (writing-auto) correctly 1`] = `
Object {
  "writingDirection": "auto",
}
`;

exports[`writingDirection Should parse (writing-ltr) correctly 1`] = `
Object {
  "writingDirection": "ltr",
}
`;

exports[`writingDirection Should parse (writing-rtl) correctly 1`] = `
Object {
  "writingDirection": "rtl",
}
`;
